--- a/AspNetCoreSpa/wwwroot/Client/app/scretches/scretches.component.scss
+++ b/AspNetCoreSpa/wwwroot/Client/app/scretches/scretches.component.scss
@@ -201,3 +201,12 @@
         }
     }
 }
+
+suppastyle ::ng-deep .ui-fileupload-row {
+    div {
+        background-color: gray;
+        max-width:30em;
+        overflow:hidden;
+        text-overflow:ellipsis;
+    }
+}
