--- a/AspNetCoreSpa/wwwroot/Client/app/app.component.html
+++ b/AspNetCoreSpa/wwwroot/Client/app/app.component.html
@@ -12,7 +12,7 @@
                 <ul class="nav navbar-nav">
                     <li title="Click to switch to home page" [routerLinkActive]="['active']"><a [routerLink]="['/welcome']">Home</a></li>
                     <li title="Click to switch to online shop page" [routerLinkActive]="['active']"><a [routerLink]="['/products']">Online Shop</a></li>
-                    <li title="Click to switch to scretches page" [routerLinkActive]="['active']"><a [routerLink]="['/scretches']">Scretches</a></li>
+                    <li title="Click to switch to scratches page" [routerLinkActive]="['active']"><a [routerLink]="['/scretches']">Scratches</a></li>
                     <li title="Click to switch to contacts page" [routerLinkActive]="['active']"><a [routerLink]="['/contacts']">Contacts</a></li>
                     <li title="Click to switch to page about the parlor" [routerLinkActive]="['active']"><a [routerLink]="['/aboutus']">About Us</a></li>
                     <li title="Click to switch to FAQ page" [routerLinkActive]="['active']"><a [routerLink]="['/help']">FAQ</a></li>
