--- a/AspNetCoreSpa/Views/Shared/_Layout.cshtml
+++ b/AspNetCoreSpa/Views/Shared/_Layout.cshtml
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AspNetCoreSpa</title>
+    <title>Tatooed youth</title>
     <base href="/" />
     <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
 
