--- a/AspNetCoreSpa/wwwroot/Client/app/cabinet/cabinet.component.scss
+++ b/AspNetCoreSpa/wwwroot/Client/app/cabinet/cabinet.component.scss
@@ -52,6 +52,12 @@
         margin-top: 0%;
     }
 
+    .floatingRight {
+        float: right;
+        margin-right: 5%;
+        margin-top: 0%;
+    }
+
     .headchangewidth {
         width: 30%;
     }
@@ -87,6 +93,12 @@
     @media only screen and (min-width: 800px) {
         .tatoodiv {
             width: 40%;
+        }
+
+        .floatingRight {
+            float: none;
+            margin-right: 0%;
+            margin-top: 0%;
         }
 
         .floating {
